# uribrowser

./: README.md  pyproject.toml
markpacts/: uribrowserdocker.markpact.md
tests/: test_handlers.py  test_import_uribrowserdocker.py
uribrowserdocker/: handlers.py  manifest.yaml
uribrowseredge/: cli.py  runtime.py
